--- a/Cars/app/src/main/res/layout-v17/activity_main.xml
+++ b/Cars/app/src/main/res/layout-v17/activity_main.xml
@@ -1,63 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.killian.cars.MainActivity">
+    android:padding="@dimen/activity_vertical_margin">
 
-    <LinearLayout
-
-        android:orientation="vertical"
+    <view
+        android:id="@+id/car_recycler_view"
+        class="android.support.v7.widget.RecyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true">
+        android:layout_centerInParent="true" />
 
-        <TableLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-            <TableRow
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:focusable="false"
-                android:background="#a2a54242">
-
-                <FrameLayout
-                    android:layout_width="175dp"
-                    android:layout_height="120dp"
-                    android:background="#ffffff">
-
-                </FrameLayout>
-
-                <TextView
-                    android:layout_width="235dp"
-                    android:layout_height="match_parent"
-                    android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:text="@string/carname"
-                    android:id="@+id/CarDesc"
-                    android:layout_column="1"
-                    android:textStyle="bold"
-                    android:textAlignment="center" />
-
-            </TableRow>
-
-            <TableRow
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
-
-                <Space
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent" />
-
-                <Space
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_column="1" />
-
-            </TableRow>
-
-        </TableLayout>
-    </LinearLayout>
+    <ProgressBar
+        android:id="@+id/progress_bar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true" />
 </RelativeLayout>
