--- a/Cars/app/src/main/res/layout-v17/activity_main.xml
+++ b/Cars/app/src/main/res/layout-v17/activity_main.xml
@@ -5,16 +5,15 @@
     android:layout_height="match_parent"
     android:padding="@dimen/activity_vertical_margin">
 
-    <view
-        android:id="@+id/car_recycler_view"
-        class="android.support.v7.widget.RecyclerView"
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recycler_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_centerInParent="true" />
-
-    <ProgressBar
-        android:id="@+id/progress_bar"
-        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true" />
+        android:scrollbars="vertical" />
+
+    <!--<ProgressBar-->
+        <!--android:id="@+id/progress_bar"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_centerInParent="true" />-->
 </RelativeLayout>
