--- a/Cars/app/src/main/res/layout-v17/caritemrow.xml
+++ b/Cars/app/src/main/res/layout-v17/caritemrow.xml
@@ -1,31 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="120dp"
     android:focusable="true"
     android:paddingLeft="16dp"
-    android:paddingRight="16dp"
-    android:paddingTop="10dp"
-    android:paddingBottom="10dp"
     android:clickable="true"
     android:background="?android:attr/selectableItemBackground"
     android:orientation="vertical">
 
     <TextView
         android:id="@+id/car_item_title"
-        android:textSize="16dp"
+        android:textSize="30dp"
         android:textStyle="bold"
-        android:layout_alignParentTop="true"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="this is a model" />
+        android:text="this is a model"
+        android:layout_centerVertical="true" />
 
     <ImageView
-        android:layout_width="100dp"
-        android:layout_height="100dp"
+        android:layout_width="90dp"
+        android:layout_height="match_parent"
         android:id="@+id/car_item_image"
-        android:layout_toEndOf="@+id/car_item_title"
-        android:layout_below="@+id/car_item_title" />
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_toRightOf="@+id/car_item_title"
+        android:layout_marginLeft="20dp"
+        android:layout_alignParentBottom="true"
+        android:layout_marginRight="20dp" />
 
 
 </RelativeLayout>
