--- a/Cars/app/src/main/res/layout-v17/caritemrow.xml
+++ b/Cars/app/src/main/res/layout-v17/caritemrow.xml
@@ -1,17 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="120dp"
     android:focusable="true"
     android:clickable="true"
     android:background="?android:attr/selectableItemBackground"
     android:orientation="vertical"
-    android:padding="16dp">
+    android:padding="4dp">
 
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_alignParentTop="true">
+        android:layout_alignParentTop="true"
+        android:layout_margin="2dp">
 
         <RelativeLayout
             android:layout_width = "match_parent"
@@ -25,7 +26,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="this is a model"
-                android:layout_centerVertical="true" />
+                android:layout_alignBottom="@+id/car_item_image"
+                android:layout_alignTop="@+id/car_item_image" />
 
             <ImageView
                 android:layout_width="90dp"
