Added Low resolution images to car items for performance

--- a/Cars/app/src/main/res/layout-v17/caritemrow.xml
+++ b/Cars/app/src/main/res/layout-v17/caritemrow.xml
@@ -21,25 +21,27 @@
 
             <TextView
                 android:scrollHorizontally="false"
-                android:text="First line\r\nNext line"
+                android:text="Model"
                 android:id="@+id/car_item_title"
-                android:textSize="30dp"
+                android:textSize="20dp"
                 android:textStyle="bold"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignBottom="@+id/car_item_image"
-                android:layout_alignTop="@+id/car_item_image" />
+                android:layout_centerVertical="true"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true" />
 
             <ImageView
-                android:layout_width="90dp"
-                android:layout_height="match_parent"
+                android:layout_width="150dp"
+                android:layout_height="90dp"
                 android:id="@+id/car_item_image"
                 android:layout_alignParentRight="true"
                 android:layout_alignParentEnd="true"
-                android:layout_toRightOf="@+id/car_item_title"
-                android:layout_marginLeft="20dp"
                 android:layout_alignParentBottom="true"
-                android:layout_marginRight="16dp" />
+                android:layout_marginRight="16dp"
+                android:scaleType="fitCenter"
+                android:adjustViewBounds="true"
+                android:background="#7d6c6c" />
 
         </RelativeLayout>
     </android.support.v7.widget.CardView>
