Fix car pager, change target sdk to 23(let me know if you can build on this version)

--- a/Cars/app/src/main/res/layout-v17/car_pager_item.xml
+++ b/Cars/app/src/main/res/layout-v17/car_pager_item.xml
@@ -6,8 +6,7 @@
     <ImageView
         android:id="@+id/carPagerImage"
         android:layout_width="match_parent"
-        android:layout_height="200dp"
+        android:layout_height="300dp"
         android:adjustViewBounds="true"
-        android:scaleType="fitCenter" />
-        <!--android:contentDescription="@string/pagerImageDescription"-->
+        android:scaleType="fitXY"/>
 </LinearLayout>
