--- a/Cars/app/src/main/res/layout-v17/activity_car.xml
+++ b/Cars/app/src/main/res/layout-v17/activity_car.xml
@@ -23,19 +23,11 @@
             <android.support.v4.view.ViewPager
                 android:id="@+id/viewPager"
                 android:layout_width="wrap_content"
-                android:layout_height="200dp"
-                android:layout_marginTop="?attr/actionBarSize"
+                android:layout_height="300dp"
+                android:layout_marginTop="0dp"
                 android:background="#ffffff"
                 app:layout_collapseMode="parallax">
             </android.support.v4.view.ViewPager>
-
-            <!--<android.support.v7.widget.Toolbar-->
-                <!--android:id="@+id/toolbar"-->
-                <!--android:layout_width="match_parent"-->
-                <!--android:layout_height="?attr/actionBarSize"-->
-
-                <!--app:layout_collapseMode="pin" />-->
-
         </android.support.design.widget.CollapsingToolbarLayout>
     </android.support.design.widget.AppBarLayout>
 
