--- a/Cars/app/src/main/res/layout-v17/activity_car.xml
+++ b/Cars/app/src/main/res/layout-v17/activity_car.xml
@@ -21,7 +21,7 @@
             android:fitsSystemWindows="true">
 
             <android.support.v4.view.ViewPager
-                android:id="@+id/viewPager"
+                android:id="@+id/carImagePager"
                 android:layout_width="wrap_content"
                 android:layout_height="300dp"
                 android:layout_marginTop="0dp"
