--- a/Cars/app/src/main/res/layout-v17/content_car.xml
+++ b/Cars/app/src/main/res/layout-v17/content_car.xml
@@ -20,7 +20,7 @@
             android:background="#466c6c6c" />
 
         <android.support.v4.view.ViewPager
-            android:id="@+id/carInfoPager"
+            android:id="@+id/carTabPager"
             android:layout_width="fill_parent"
             android:layout_height="600dp"
             android:layout_below="@id/tab_layout" />
