--- a/Cars/app/src/main/res/layout-v17/fragment_car_feedback.xml
+++ b/Cars/app/src/main/res/layout-v17/fragment_car_feedback.xml
@@ -23,13 +23,9 @@
         android:layout_alignParentStart="true"
         android:id="@+id/view" />
 
-    <ListView
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/feedback_recycler_view"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/listView"
-        android:layout_below="@+id/view"
-        android:layout_toStartOf="@+id/textView"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
+        android:layout_height="wrap_content"/>
 
 </RelativeLayout>
