Database seems ok but not displaying on UI

--- a/Cars/app/src/main/res/layout-v17/car_feedback_item.xml
+++ b/Cars/app/src/main/res/layout-v17/car_feedback_item.xml
@@ -1,19 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
             <ImageView
                 android:layout_width="40dp"
                 android:layout_height="40dp"
-                android:background="@drawable/img"
                 android:id="@+id/user_avatar"
-                android:layout_below="@+id/view"
+                android:layout_marginLeft="20dp"
+                android:layout_marginStart="20dp"
+                android:layout_centerVertical="true"
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true"
-                android:layout_marginLeft="30dp"
-                android:layout_marginStart="31dp"
-                android:layout_marginTop="30dp" />
+                android:layout_marginTop="20dp" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -22,8 +21,10 @@
                 android:text="Username"
                 android:id="@+id/user_name"
                 android:layout_column="5"
-                android:layout_marginLeft="10dp"
-                android:layout_marginTop="40dp" />
+                android:layout_centerVertical="true"
+                android:layout_toRightOf="@+id/user_avatar"
+                android:layout_toEndOf="@+id/user_avatar"
+                android:layout_marginLeft="20dp" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -32,6 +33,8 @@
                 android:text="Feedback"
                 android:id="@+id/user_feedback"
                 android:layout_column="15"
-                android:layout_marginLeft="20dp" />
+                android:layout_below="@+id/user_avatar"
+                android:layout_alignLeft="@+id/user_name"
+                android:layout_alignStart="@+id/user_name" />
 
 </RelativeLayout>
