--- a/Cars/app/src/main/res/layout-v17/fragment_car_feedback.xml
+++ b/Cars/app/src/main/res/layout-v17/fragment_car_feedback.xml
@@ -26,6 +26,9 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/feedback_recycler_view"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/view"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 
 </RelativeLayout>
