--- a/Cars/app/src/main/res/layout-v17/activity_car.xml
+++ b/Cars/app/src/main/res/layout-v17/activity_car.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="Activities.CarActivity">
+    tools:context="activities.CarActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
