--- a/Cars/app/src/main/res/layout-v17/activity_car.xml
+++ b/Cars/app/src/main/res/layout-v17/activity_car.xml
@@ -17,8 +17,8 @@
             android:id="@+id/collapsing_toolbar"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            app:layout_scrollFlags="scroll|exitUntilCollapsed"
-            android:fitsSystemWindows="true">
+            android:fitsSystemWindows="true"
+            app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
             <android.support.v4.view.ViewPager
                 android:id="@+id/carImagePager"
@@ -26,8 +26,7 @@
                 android:layout_height="300dp"
                 android:layout_marginTop="0dp"
                 android:background="#ffffff"
-                app:layout_collapseMode="parallax">
-            </android.support.v4.view.ViewPager>
+                app:layout_collapseMode="parallax"></android.support.v4.view.ViewPager>
         </android.support.design.widget.CollapsingToolbarLayout>
     </android.support.design.widget.AppBarLayout>
 
