--- a/Cars/app/src/main/res/layout-v17/activity_car.xml
+++ b/Cars/app/src/main/res/layout-v17/activity_car.xml
@@ -24,9 +24,9 @@
                 android:id="@+id/carImagePager"
                 android:layout_width="wrap_content"
                 android:layout_height="300dp"
-                android:layout_marginTop="0dp"
+                android:layout_marginTop="-60dp"
                 android:background="#ffffff"
-                app:layout_collapseMode="parallax"></android.support.v4.view.ViewPager>
+                app:layout_collapseMode="parallax"/>
         </android.support.design.widget.CollapsingToolbarLayout>
     </android.support.design.widget.AppBarLayout>
 
