prepare db for inserting feedback, cleanup

--- a/Cars/app/src/main/res/layout-v17/car_feedback_item.xml
+++ b/Cars/app/src/main/res/layout-v17/car_feedback_item.xml
@@ -1,38 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
 
-            <ImageView
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:id="@+id/user_avatar"
-                android:layout_alignParentTop="true"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true"
-                android:layout_margin="20dp" />
+    <ImageView
+        android:id="@+id/user_avatar"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_margin="20dp"
+        android:contentDescription="@string/user_image" />
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceMedium"
-                android:text="Username"
-                android:id="@+id/user_name"
-                android:layout_column="5"
-                android:layout_alignBottom="@+id/user_avatar"
-                android:layout_alignLeft="@+id/user_feedback"
-                android:layout_alignStart="@+id/user_feedback" />
+    <TextView
+        android:id="@+id/user_name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/user_avatar"
+        android:layout_alignStart="@+id/user_feedback"
+        android:text=""
+        android:textAppearance="?android:attr/textAppearanceMedium" />
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceSmall"
-                android:text="Feedbackkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkk"
-                android:id="@+id/user_feedback"
-                android:layout_column="15"
-                android:textAlignment="textStart"
-                android:layout_below="@+id/user_avatar"
-                android:layout_toRightOf="@+id/user_avatar"
-                android:layout_toEndOf="@+id/user_avatar" />
-
+    <TextView
+        android:id="@+id/user_feedback"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/user_avatar"
+        android:layout_toEndOf="@+id/user_avatar"
+        android:text="@string/feedbackkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkk"
+        android:textAlignment="textStart"
+        android:textAppearance="?android:attr/textAppearanceSmall" />
 </RelativeLayout>
