--- a/Cars/app/src/main/res/layout-v17/content_car.xml
+++ b/Cars/app/src/main/res/layout-v17/content_car.xml
@@ -4,8 +4,8 @@
     android:id="@+id/scrollViewCar"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    android:clipToPadding="false" >
+    android:clipToPadding="false"
+    app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
     <RelativeLayout
         android:layout_width="fill_parent"
