--- a/Cars/app/src/main/res/layout-v17/car_pager_item.xml
+++ b/Cars/app/src/main/res/layout-v17/car_pager_item.xml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <ImageView
         android:id="@+id/carPagerImage"
         android:layout_width="match_parent"
         android:layout_height="220dp"
         android:adjustViewBounds="true"
-        android:scaleType="fitXY"/>
+        android:contentDescription="@string/car_pager_image_desc"
+        android:scaleType="fitXY" />
 </LinearLayout>
