--- a/Cars/app/src/main/res/layout-v17/splash.xml
+++ b/Cars/app/src/main/res/layout-v17/splash.xml
@@ -4,8 +4,8 @@
     android:layout_height="match_parent">
 
     <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
         android:id="@+id/splash_image"
         android:layout_gravity="center"
         android:src="@mipmap/logo"/>
