--- a/Cars/app/src/main/res/layout-v17/activity_car.xml
+++ b/Cars/app/src/main/res/layout-v17/activity_car.xml
@@ -27,7 +27,25 @@
                 android:layout_marginTop="-60dp"
                 android:background="#ffffff"
                 app:layout_collapseMode="parallax" />
+
+
         </android.support.design.widget.CollapsingToolbarLayout>
+
+        <RelativeLayout
+            android:id="@+id/viewPagerIndicator"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:background="#ffffff">
+
+            <LinearLayout
+                android:id="@+id/viewPagerCountDots"
+                android:layout_width="match_parent"
+                android:layout_height="30dp"
+                android:layout_centerHorizontal="true"
+                android:gravity="center"
+                android:orientation="horizontal" />
+        </RelativeLayout>
     </android.support.design.widget.AppBarLayout>
 
     <include layout="@layout/content_car" />
