--- a/Cars/app/src/main/res/layout-v17/fragment_car_feedback.xml
+++ b/Cars/app/src/main/res/layout-v17/fragment_car_feedback.xml
@@ -27,6 +27,44 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
-        android:layout_below="@+id/view" />
+        android:layout_below="@+id/feedback_button" />
+
+    <Button
+        android:id="@+id/feedback_button"
+        style="?android:attr/buttonStyleSmall"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/feedback_text"
+        android:layout_marginTop="21dp"
+        android:text="Leave Feedback" />
+
+    <EditText
+        android:id="@+id/feedback_text"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/url_text"
+        android:ems="10"
+        android:inputType="textMultiLine"
+        android:text="Feedback" />
+
+    <EditText
+        android:id="@+id/name_text"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/view"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:text="Name" />
+
+    <EditText
+        android:id="@+id/url_text"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/name_text"
+        android:text="Avatar URL(Optional)" />
 
 </RelativeLayout>
