--- a/Cars/app/src/main/res/layout-v17/fragment_car_feedback.xml
+++ b/Cars/app/src/main/res/layout-v17/fragment_car_feedback.xml
@@ -44,10 +44,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
-        android:layout_below="@+id/url_text"
         android:ems="10"
         android:inputType="textMultiLine"
-        android:text="Feedback" />
+        android:text="Feedback"
+        android:layout_below="@+id/name_text" />
 
     <EditText
         android:id="@+id/name_text"
@@ -58,13 +58,5 @@
         android:ems="10"
         android:inputType="textPersonName"
         android:text="Name" />
-
-    <EditText
-        android:id="@+id/url_text"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/name_text"
-        android:text="Avatar URL(Optional)" />
 
 </RelativeLayout>
