--- a/Cars/app/src/main/res/layout-v17/fragment_car_feedback.xml
+++ b/Cars/app/src/main/res/layout-v17/fragment_car_feedback.xml
@@ -37,7 +37,7 @@
         android:layout_alignParentStart="true"
         android:layout_below="@+id/feedback_text"
         android:layout_marginTop="21dp"
-        android:text="Leave Feedback" />
+        android:text="@string/leave_feedback" />
 
     <EditText
         android:id="@+id/feedback_text"
@@ -46,7 +46,7 @@
         android:layout_alignParentStart="true"
         android:ems="10"
         android:inputType="textMultiLine"
-        android:text="Feedback"
+        android:text="@string/feedback"
         android:layout_below="@+id/name_text" />
 
     <EditText
@@ -57,6 +57,6 @@
         android:layout_below="@+id/view"
         android:ems="10"
         android:inputType="textPersonName"
-        android:text="Name" />
+        android:text="@string/name" />
 
 </RelativeLayout>
