--- a/Cars/app/src/main/res/layout-v17/fragment_car_info.xml
+++ b/Cars/app/src/main/res/layout-v17/fragment_car_info.xml
@@ -10,7 +10,7 @@
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:padding="10dp"
-        android:text="model"
+        android:text="@string/model"
         android:textColor="#000000"
         android:textSize="24sp" />
 
