--- a/Cars/app/src/main/res/drawable/item_unselected.xml
+++ b/Cars/app/src/main/res/drawable/item_unselected.xml
@@ -5,5 +5,5 @@
 
     <size android:height="8dp" android:width="8dp"/>
 
-    <solid android:color= "#ccccff"/>
+    <solid android:color= "#66b3ff"/>
 </shape>
