--- a/Cars/app/src/main/res/layout-v17/activity_main.xml
+++ b/Cars/app/src/main/res/layout-v17/activity_main.xml
@@ -10,7 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 
-    <android.support.v7.widget.RecyclerView
+    <com.example.killian.cars.utils.MyRecyclerView
         android:id="@+id/recycler_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
