--- a/Cars/app/src/main/res/layout-v17/fragment_car_feedback.xml
+++ b/Cars/app/src/main/res/layout-v17/fragment_car_feedback.xml
@@ -22,7 +22,7 @@
         android:layout_below="@+id/textView"
         android:background="@android:color/darker_gray" />
 
-    <android.support.v7.widget.RecyclerView
+    <com.example.killian.cars.utils.FeedbackItemRecyclerView
         android:id="@+id/feedback_recycler_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
