Prep made for new comment box, feedback currently broke as a result

--- a/Cars/app/src/main/res/values/styles.xml
+++ b/Cars/app/src/main/res/values/styles.xml
@@ -10,4 +10,9 @@
 
     </style>
 
+    <style name="PopupAnimation" parent="Widget.AppCompat.PopupWindow">
+        <item name="android:windowEnterAnimation">@anim/bottom_up</item>
+        <item name="android:windowExitAnimation">@anim/bottom_down</item>
+    </style>
+
 </resources>
