--- a/Cars/app/src/main/res/layout-v17/fragment_car_feedback.xml
+++ b/Cars/app/src/main/res/layout-v17/fragment_car_feedback.xml
@@ -2,6 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/feedback_deflated"
     android:orientation="vertical">
 
     <TextView
@@ -26,37 +27,15 @@
         android:id="@+id/feedback_recycler_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/feedback_button" />
+        android:layout_alignParentStart="true" />
 
     <Button
-        android:id="@+id/feedback_button"
+        android:id="@+id/feedback_transition_button"
         style="?android:attr/buttonStyleSmall"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/feedback_text"
-        android:layout_marginTop="21dp"
-        android:text="@string/leave_feedback" />
-
-    <EditText
-        android:id="@+id/feedback_text"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:ems="10"
-        android:inputType="textMultiLine"
-        android:text="@string/feedback"
-        android:layout_below="@+id/name_text" />
-
-    <EditText
-        android:id="@+id/name_text"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
+        android:text="@string/leave_feedback"
         android:layout_below="@+id/view"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:text="@string/name" />
+        android:layout_alignParentStart="true" />
 
 </RelativeLayout>
