--- a/Cars/app/src/main/res/layout-v17/fragment_car_feedback.xml
+++ b/Cars/app/src/main/res/layout-v17/fragment_car_feedback.xml
@@ -1,16 +1,12 @@
-<?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/feedback_deflated"
     android:orientation="vertical">
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
         android:layout_marginTop="10dp"
         android:text="@string/recent_feedback"
         android:textAppearance="?android:attr/textAppearanceSmall" />
@@ -19,23 +15,24 @@
         android:id="@+id/view"
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/textView"
         android:background="@android:color/darker_gray" />
+
+    <Button
+        android:id="@+id/feedback_inflate_button"
+        style="?android:attr/buttonStyleSmall"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/leave_feedback" />
+
+    <include
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        layout="@layout/fragment_insert_feedback"
+        />
 
     <com.example.killian.cars.utils.FeedbackItemRecyclerView
         android:id="@+id/feedback_recycler_view"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true" />
+        android:layout_height="wrap_content" />
 
-    <Button
-        android:id="@+id/feedback_transition_button"
-        style="?android:attr/buttonStyleSmall"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/leave_feedback"
-        android:layout_below="@+id/view"
-        android:layout_alignParentStart="true" />
-
-</RelativeLayout>
+</LinearLayout>
