RecyclerView Animation fixed and improved

--- a/Cars/app/src/main/res/layout-v17/fragment_car_feedback.xml
+++ b/Cars/app/src/main/res/layout-v17/fragment_car_feedback.xml
@@ -1,6 +1,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
 
     <TextView
@@ -9,7 +10,9 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:text="@string/recent_feedback"
-        android:textAppearance="?android:attr/textAppearanceSmall" />
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:textAlignment="center"
+        android:layout_gravity="center_horizontal" />
 
     <View
         android:id="@+id/view"
@@ -30,9 +33,11 @@
         layout="@layout/fragment_insert_feedback"
         />
 
-    <com.example.killian.cars.utils.FeedbackItemRecyclerView
+    <android.support.v7.widget.RecyclerView
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"
         android:id="@+id/feedback_recycler_view"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="match_parent"
+        android:paddingBottom="20dp"/>
 
 </LinearLayout>
