--- a/Cars/app/src/main/res/layout-v17/splash.xml
+++ b/Cars/app/src/main/res/layout-v17/splash.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -8,5 +9,6 @@
         android:layout_height="100dp"
         android:id="@+id/splash_image"
         android:layout_gravity="center"
-        android:src="@mipmap/logo"/>
+        android:src="@mipmap/logo"
+        tools:ignore="ContentDescription" />
 </FrameLayout>
