--- a/Cars/app/src/main/res/layout-v17/content_car.xml
+++ b/Cars/app/src/main/res/layout-v17/content_car.xml
@@ -7,7 +7,7 @@
     android:clipToPadding="false"
     app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
@@ -21,7 +21,6 @@
         <android.support.v4.view.ViewPager
             android:id="@+id/carTabPager"
             android:layout_width="fill_parent"
-            android:layout_height="1200dp"
-            android:layout_below="@id/tab_layout" />
-    </RelativeLayout>
+            android:layout_height="1200dp" />
+    </LinearLayout>
 </android.support.v4.widget.NestedScrollView>
